personas/minikube/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/whitelist-source-range: "192.169.*.*/32"
spec:
  rules:
  - host: dataverse.demo
    http:
      paths:
      - path: /
        backend:
          serviceName: dataverse
          servicePort: 8080
